# musicplayer

./: Cargo.toml  Info.plist.template  MusicPlayer-0.1.0.dmg  README.md  deploy_macos.sh  macos_create_icon.sh  musicplayer.desktop  musicplayer_register.reg
.cargo/: config
MusicPlayer.app/Contents/: Info.plist
resources/: app_icon.icns
src/: cli.rs  config.rs  gui.rs  lib.rs  main.rs  player.rs  utils.rs
tests/: app_tests.rs  mock_player_test.rs  mutex_test.rs  playlist_tests.rs  sync_tests.rs  ui_tests.rs
